fixed alignment

--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -26,7 +26,6 @@
 
     .home-main p{
         grid-column: 2/4;
-        padding: .5em 1.25rem;
     }
 
     .home-main h3{
